fixed letter spacing styling

--- a/src/app/styles/navbar/navbar.module.css
+++ b/src/app/styles/navbar/navbar.module.css
@@ -32,6 +32,7 @@
 .greeting {
   float: right;
   margin-left: 1rem;
+  letter-spacing: normal;
 }
 
 .menu_icon {
